--- a/src/modules/OrderManager/components/PDVviews/pdfView.module.less
+++ b/src/modules/OrderManager/components/PDVviews/pdfView.module.less
@@ -3,6 +3,10 @@
   flex-direction: column;
   gap: 24px;
 
+  .marginTopContainer {
+    margin-top: 4rem;
+  }
+
   .headerTag {
     font-size: 20px;
     margin: 0;
@@ -17,33 +21,29 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      width: 100%;
-      height: 100%;
-      margin: 12px 0px 24px 0px !important;
 
+      margin: 12px 0px 24px 0px !important;
       .pdf {
         overflow: hidden;
         display: block;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
         border-radius: 3px;
-        width: 21cm;
-        height: 29.7cm;
 
-        page[size="A4"] {
+        .a4Pdf {
           background: #fff;
           width: 21cm;
           height: 29.7cm;
           display: block;
           margin: 0 auto;
-          margin-bottom: 0.5cm;
-          box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+          margin-bottom: 0.1cm;
         }
-        @media print {
-          body,
-          page[size="A4"] {
-            margin: 0;
-            box-shadow: 0;
-          }
+        .a3Pdf {
+          background: #fff;
+          width: 29.7cm;
+          height: 42cm;
+          display: block;
+          margin: 0 auto;
+          margin-bottom: 0.1cm;
         }
       }
     }
@@ -53,6 +53,17 @@
       font-size: 32px;
       font-weight: 600;
       margin-bottom: 24px;
+    }
+  }
+
+  .buttonContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin: 6px 0px;
+
+    .nextButton {
+      width: 100%;
     }
   }
 }
