added orders and some corrections

--- a/src/modules/OrderManager/components/OrderSummary/orderDetails.module.less
+++ b/src/modules/OrderManager/components/OrderSummary/orderDetails.module.less
@@ -13,4 +13,54 @@
       margin-bottom: 24px;
     }
   }
+
+  .buttonWarpper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 12px 0px;
+    gap: 16px;
+    margin-bottom: 16px;
+
+    .singleRFPButton {
+      height: 80px;
+      padding: 16px;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      .heading {
+        font-size: 16px;
+        margin-bottom: 1px;
+      }
+      .subText {
+        color: rgba(87, 87, 87, 0.56);
+        font-size: 14px;
+        margin-bottom: 3px;
+      }
+    }
+
+    .singleProgressButton {
+      height: 120px;
+      padding: 16px;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      .heading {
+        font-size: 16px;
+        margin-bottom: 1px;
+      }
+      .subText {
+        color: rgba(87, 87, 87, 0.56);
+        font-size: 14px;
+        margin-bottom: 3px;
+      }
+    }
+  }
 }
