--- a/src/modules/OrderManager/components/PDVviews/SalesContract/sales.module.less
+++ b/src/modules/OrderManager/components/PDVviews/SalesContract/sales.module.less
@@ -39,6 +39,11 @@
       font-size: 13px;
       margin-bottom: 2px;
     }
+
+    .warningText {
+      color: rgba(226, 33, 33, 0.807);
+    }
+
     .marginDivide {
       margin: 24px 0px;
     }
