--- a/src/modules/OrderManager/orderManagement.module.less
+++ b/src/modules/OrderManager/orderManagement.module.less
@@ -4,3 +4,14 @@
     margin-bottom: 24px;
   }
 }
+
+.optionTag {
+  display: flex;
+  align-items: center;
+
+  .optionFlag {
+    width: auto;
+    margin: 0px 6px;
+    height: 18px;
+  }
+}
